--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
     </style>
   </head>
   <body>
+    
     <div id="message">
       <h2>Welcome</h2>
       <h1>Firebase Hosting Setup Complete</h1>
@@ -46,6 +47,7 @@
       <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
     </div>
     <p id="load">Firebase SDK Loading&hellip;</p>
+  <div id="root"></div>
 
     <script>
       document.addEventListener('DOMContentLoaded', function() {
