--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="he">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>My App</title>
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="אתר לעדכון מצב המעיין"
+    />
+    <title>עדכון מצב המעיין</title>
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&family=Varela+Round&display=swap" rel="stylesheet">
+
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>יש להפעיל JavaScript כדי להפעיל את האתר</noscript>
     <div id="root"></div>
   </body>
 </html>
