--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+
+    <!-- צבע סטטוס בר -->
+    <meta name="theme-color" content="#00FF00" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#00AA00" media="(prefers-color-scheme: dark)">
+
     <meta
       name="description"
       content="אתר לעדכון מצב המעיין"
@@ -13,7 +17,6 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&family=Varela+Round&display=swap" rel="stylesheet">
-
   </head>
   <body>
     <noscript>יש להפעיל JavaScript כדי להפעיל את האתר</noscript>
