--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- צבע סטטוס בר -->
-    <meta name="theme-color" content="#00FF00" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="#00AA00" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#b4e8b4" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#b4e8b4" media="(prefers-color-scheme: dark)">
 
     <meta
       name="description"
