--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="he">
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/png" href="https://firebasestorage.googleapis.com/v0/b/habrecha-a69d3.firebasestorage.app/o/water-drop.png?alt=media&token=fefcb6df-84e5-43c7-9d20-33b35c8c5905" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="אתר לעדכון מצב המעיין" />
