--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,23 @@
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&family=Varela+Round&display=swap" rel="stylesheet">
-	
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-<link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <!-- Open Graph Tags לוואטסאפ ותצוגות מקדימות -->
+    <meta property="og:title" content="עדכון מצב המעיין">
+    <meta property="og:description" content="שתפו תמונה ועדכון מהמעיין">
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/habrecha-a69d3.firebasestorage.app/o/mnmnmn.png?alt=media&token=ce41691d-b5cc-4eba-bb77-e4e0475e6416">
+    <meta property="og:url" content="https://habrecha-a69d3.web.app">
+    <meta property="og:type" content="website">
 
+    <!-- תגיות Twitter (אופציונלי) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="עדכון מצב המעיין">
+    <meta name="twitter:description" content="שתפו תמונה ועדכון מהמעיין">
+    <meta name="twitter:image" content="https://firebasestorage.googleapis.com/v0/b/habrecha-a69d3.firebasestorage.app/o/mnmnmn.png?alt=media&token=ce41691d-b5cc-4eba-bb77-e4e0475e6416">
 </head>
 <body>
     <noscript>
